# xlua

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
3rd/: CMakeLists.txt
3rd/lua-5.3.5/msvc/: lua-5.3.5.vcxproj  lua-5.3.5.vcxproj.filters
3rd/lua-5.3.5/src/: CMakeLists.txt
doc/: DETAIL.md  EXPORT.md  MACRO.md
msvc/: xlua.sln
msvc/lua/: lua-5.3.5.vcxproj  lua-5.3.5.vcxproj.filters
msvc/test/: test.vcxproj  test.vcxproj.filters
msvc/xlua/: xlua.vcxproj  xlua.vcxproj.filters
test/: CMakeLists.txt  case.cpp  case.h  example.cpp  example.h  logic.h  lua_export.cpp  lua_export.h  main.cpp  main__.cpp  shape.h  test.cpp  test.h  test_export.cpp  test_global.cpp  test_push_load.cpp
tmp/: design.cpp  xlua.sln
tmp/tpy/: SampleClass.h  collector.cpp  main.py  t1.txt  t2.txt  test.cpp
tmp/tpy/ply/: SampleClass.h
tmp/xlua/: common.h  export.h  export_prepare.cpp  export_prepare.h  mian.cpp  scripts.hpp  state.h  support.h  support.hpp  xlua.cpp  xlua.h  xlua.vcxproj  xlua.vcxproj.filters  xlua_config.h  xlua_def.h  xlua_export.h  xlua_state.h  xlua_support.h
xlua/: CMakeLists.txt  core.cpp  core.h  scripts.hpp  state.h  support.hpp  xlua.cpp  xlua.h  xlua_config.h  xlua_def.h  xlua_export.h  xlua_obj.cpp  xlua_obj.h  xlua_state.cpp  xlua_state.h
xlua/detail/: common.h  export.h  extractor.h  global.cpp  global.h  serial_alloc.h  state.h  traits.h  type_desc.cpp  type_desc.h
